deploy/kustomize/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ucandoit-io
  namespace: ucandoit
  labels:
    app: ucandoit-io
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ucandoit-io
  template:
    metadata:
      labels:
        app: ucandoit-io
    spec:
      imagePullSecrets:
        - name: docker-registry
      volumes:
        - name: next-config-volume
          configMap:
            name: next-config
      containers:
      - name: ucandoit-io
        image: registry.ucandoit.io/ucandoit-io:0.0.1
        imagePullPolicy: Always
        ports:
        - name: http-entry
          protocol: TCP
          containerPort: 3000
        volumeMounts:
          - name: next-config-volume
            mountPath: /app/next.config.js
            subPath: next.config.js
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 3
        #   timeoutSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 3000
        #   initialDelaySeconds: 3
        #   timeoutSeconds: 3
