deploy/kustomize/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ucandoit-io
  namespace: ucandoit
  labels:
    app: ucandoit-io
spec:
  type: ClusterIP
  ports:
    - name: http-entry
      protocol: TCP
      port: 80
      targetPort: 3000
  selector:
    app: ucandoit-io
