deploy/kustomize/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ucandoit-io
  namespace: ucandoit
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: ucandoit.io
    http:
      paths:
      - path: /
        backend:
          serviceName: ucandoit-io
          servicePort: 80
